--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -1614,36 +1614,35 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-_63iO8cY_QT",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Lets filter to just all the 3 bedroom apartments"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "lvPtr7qFVslW",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e7fee737-b5e6-4e1d-9187-fab2ed06e67c"
       },
       "source": [
-        "df_three = df"
+        "#Lets lookat the mean price of all apartments with 2 bedrooms and 1 bathroom\n",
+        "\n",
+        "df[((df['bedrooms'] == 2) & (df['bathrooms'] == 1))]['price'].mean()"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bsEuUVIUY-Mx",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
+      "execution_count": 212,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3201.233397807866"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 212
+        }
       ]
     }
   ]
