--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -970,7 +970,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Doesnt look like there is much relationship...maybe latitude isnt a good feature to look at. If we were doing multiple regressions and looking at longitude and latitude together, than this would probably a good feature to include. However, on its own this might not be the best. "
+        "Doesnt look like there is much linear relationship...maybe latitude isnt a good feature to look at. If we were doing multiple regressions and looking at longitude and latitude together, than this would probably a good feature to include. However, on its own this might not be the best. "
       ]
     },
     {
