--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -87,6 +87,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A64lATSBMXEo",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Read in data and create dataframe"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -1807,9 +1817,9 @@
         "colab": {}
       },
       "source": [
-        "# instantiate the model\n",
+        "# set model class, instatiate linear regression\n",
         "\n",
-        "model = LinearRegression()"
+        "model = LinearRegression(fit_intercept=True)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1822,7 +1832,326 @@
         "colab": {}
       },
       "source": [
-        "# "
+        "# set the x features matrix and the y target matrix vectors\n",
+        "\n",
+        "features = ['interest_level', 'pets_allowed', 'luxury_features']\n",
+        "target = ['price']\n",
+        "\n",
+        "X_train = train[features]\n",
+        "X_test = test[features]\n",
+        "y_train = train[target]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gA1RAlcVHCnQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "71be1c78-c46f-4977-d416-45aafa06b246"
+      },
+      "source": [
+        "# Fit the model\n",
+        "\n",
+        "model.fit(X_train, y_train)"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fi2tMVcBHNNP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "05c83cf8-5264-419a-ea62-d0ddbd491751"
+      },
+      "source": [
+        "# apply model to the test data\n",
+        "\n",
+        "y_pred = model.predict(X_test)\n",
+        "y_pred.T"
+      ],
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[3049.81622269, 4043.35709784, 3182.78739622, ..., 3049.81622269,\n",
+              "        3613.07224703, 3049.81622269]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bTbyA__iIL6W",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Get the model's coefficients and intercept."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zz3ND3y2HjQn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        },
+        "outputId": "87645db1-c0eb-41f9-d147-ec6e8389b76a"
+      },
+      "source": [
+        "# Get the model's coefficients and intercept.\n",
+        "\n",
+        "print('The intercept for the linear regression model is', model.intercept_[0])\n",
+        "\n",
+        "pd.DataFrame(model.coef_.T, index=X_train.columns, columns=['Coefficients'])"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The intercept for the linear regression model is 3315.7585697543323\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Coefficients</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>interest_level</th>\n",
+              "      <td>-132.971174</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>pets_allowed</th>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>luxury_features</th>\n",
+              "      <td>430.284851</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 Coefficients\n",
+              "interest_level    -132.971174\n",
+              "pets_allowed         0.000000\n",
+              "luxury_features    430.284851"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GlMjwKwLKEHY",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pahfWd2bJfyR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "from numpy import ndarray\n",
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fc1ks3puLCYs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "eb9e358a-bbeb-4c18-cda0-95dd24f3cc45"
+      },
+      "source": [
+        "mean_squared_error(test['price'], y_pred)"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2831471.2869073087"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-GX5aDDbLe8p",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b11a21c7-e653-4bea-b5f1-2da86eb26004"
+      },
+      "source": [
+        "mean_absolute_error(test['price'], y_pred)"
+      ],
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1137.008173060534"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I9WMU2EFOlSr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import plotly as px"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rjmkRDIvOu3i",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "px.scatter()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U_pPi0BcQZtu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        },
+        "outputId": "1a9cbede-122a-4e6b-f02a-347035171f7c"
+      },
+      "source": [
+        "y_true = np.flatten(test['price'])"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-97-675bdd9ccd1f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my_true\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'price'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'flatten'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZgmTSWstQgST",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
