--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -2037,24 +2037,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "eb9e358a-bbeb-4c18-cda0-95dd24f3cc45"
+        "outputId": "431a71fe-5097-4db1-e525-851b9feeeee4"
       },
       "source": [
-        "mean_squared_error(test['price'], y_pred)"
+        "np.sqrt(mean_squared_error(test['price'], y_pred))"
       ],
-      "execution_count": 92,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2831471.2869073087"
+              "1682.6976219473624"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 92
+          "execution_count": 131
         }
       ]
     },
@@ -2067,12 +2067,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "b11a21c7-e653-4bea-b5f1-2da86eb26004"
+        "outputId": "035c0ed9-3dc6-4fbf-8034-4d3aec053a95"
       },
       "source": [
         "mean_absolute_error(test['price'], y_pred)"
       ],
-      "execution_count": 93,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2084,69 +2084,173 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 93
+          "execution_count": 132
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "I9WMU2EFOlSr",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import plotly as px"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rjmkRDIvOu3i",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "px.scatter()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "U_pPi0BcQZtu",
+        "id": "ouhQ_BiYYBPi",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 165
+          "height": 34
         },
-        "outputId": "1a9cbede-122a-4e6b-f02a-347035171f7c"
+        "outputId": "b42db3fa-a132-43a0-fff7-9d980bc2343e"
       },
       "source": [
-        "y_true = np.flatten(test['price'])"
+        "r2_score(test['price'], y_pred)"
       ],
-      "execution_count": 97,
+      "execution_count": 130,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-97-675bdd9ccd1f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my_true\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'price'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'flatten'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.08897943646837758"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 130
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZgmTSWstQgST",
+        "id": "bOW2aUUobDvJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 138
+        },
+        "outputId": "77e67e0c-c5ff-470e-f1ed-73a8e4bf18fb"
+      },
+      "source": [
+        "## Lets check for the train dataset\n",
+        "\n",
+        "y_pred = model.predict(X_train)\n",
+        "y_pred"
+      ],
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[3315.75856975],\n",
+              "       [3182.78739622],\n",
+              "       [3182.78739622],\n",
+              "       ...,\n",
+              "       [3613.07224703],\n",
+              "       [3613.07224703],\n",
+              "       [3182.78739622]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 134
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yko4hbfUdqZY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5605e7a9-f253-4dc3-cf48-76d646c7adbd"
+      },
+      "source": [
+        "np.sqrt(mean_squared_error(y_train, y_pred))"
+      ],
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1690.0974627762596"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 136
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4v1BH1KRiejM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f8386e0e-a80e-4944-c6d6-4bede05ec354"
+      },
+      "source": [
+        "mean_absolute_error(y_train, y_pred)"
+      ],
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1150.5763555213925"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 137
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dJ6nnl_hiwLj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "96c69b23-6507-484b-c027-c1520f3f1959"
+      },
+      "source": [
+        "r2_score(y_train, y_pred)"
+      ],
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.08016400930731349"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 138
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AVzIbg1mi2xb",
         "colab_type": "code",
         "colab": {}
       },
