--- a/Ekram_LS_DS_212_assignment.ipynb
+++ b/Ekram_LS_DS_212_assignment.ipynb
@@ -158,16 +158,16 @@
       "metadata": {
         "id": "7_I_shsw6TfD",
         "colab_type": "code",
+        "outputId": "bfc45ce5-f35b-4412-effb-8af95f8be9bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 501
-        },
-        "outputId": "dc3e3fd8-887a-4a0f-bd7c-70d0a2d42161"
+        }
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +431,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -487,16 +487,16 @@
       "metadata": {
         "id": "wGHYuRQh87NT",
         "colab_type": "code",
+        "outputId": "cc2f37cc-9a72-49cc-efd4-638e20c11467",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 501
-        },
-        "outputId": "b721ee41-1c07-40c8-c9a6-b9102c01c806"
+        }
       },
       "source": [
         "train.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -760,7 +760,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -779,16 +779,16 @@
       "metadata": {
         "id": "2-d_i5LF88oL",
         "colab_type": "code",
+        "outputId": "acb42474-f088-4e61-a116-ae8c3382f45f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 501
-        },
-        "outputId": "bb85676f-ab3d-4486-be59-f5784b16ed9f"
+        }
       },
       "source": [
         "test.head()"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1052,7 +1052,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -1073,17 +1073,17 @@
       "metadata": {
         "id": "b-zxv0Y1-IE_",
         "colab_type": "code",
+        "outputId": "3ad3b37f-3f4e-4787-8de8-f7a848a9e2dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 501
-        },
-        "outputId": "bae19eb4-be14-4495-b83f-d26a5686aa4b"
+        }
       },
       "source": [
         "df['cats_&_dogs_allowed'] = df['cats_allowed'] & df['dogs_allowed']\n",
         "df.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1353,7 +1353,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -1362,17 +1362,17 @@
       "metadata": {
         "id": "dgxifpYs-6KV",
         "colab_type": "code",
+        "outputId": "d8308e83-5f7c-4df9-bd98-567dedf1cc12",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 501
-        },
-        "outputId": "a361f57f-be62-4996-f562-3ad9563b0fd4"
+        }
       },
       "source": [
         "df['ratio_of_beds/baths'] = df['bedrooms'] / df['bathrooms']\n",
         "df.head()"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1648,7 +1648,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -1741,16 +1741,16 @@
       "metadata": {
         "id": "5SWx10FvC35B",
         "colab_type": "code",
+        "outputId": "4ccc7ec1-3987-4425-fb9d-05f7c3c475f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8dc7a1bb-5bca-488c-dc5c-d9580c3338df"
+        }
       },
       "source": [
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 36,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1762,7 +1762,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 16
         }
       ]
     },
@@ -1794,16 +1794,16 @@
       "metadata": {
         "id": "VJcMRqmvIWyO",
         "colab_type": "code",
+        "outputId": "fe84f74d-f22f-4ec1-a3c4-907ef2fc7a3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f9e64191-042d-4715-96f1-5df51043182b"
+        }
       },
       "source": [
         "model.intercept_"
       ],
-      "execution_count": 52,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1815,7 +1815,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 17
         }
       ]
     },
@@ -1824,16 +1824,16 @@
       "metadata": {
         "id": "F27xxN_GIZjJ",
         "colab_type": "code",
+        "outputId": "e77df61c-5e96-47c1-d142-6c7f3421c9b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7a746b51-cc92-4f9b-fb31-74a73757d7eb"
+        }
       },
       "source": [
         "model.coef_"
       ],
-      "execution_count": 53,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1845,7 +1845,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 18
         }
       ]
     },
@@ -1875,41 +1875,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rTm7F1-rJgng",
+        "id": "x86D9WmRRgh1",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "49e2115e-2c63-4cad-c49b-5b0f95b77c9f"
       },
       "source": [
-        "guess = y_train.mean()"
+        "y_pred = model.predict(X_test)\n",
+        "y_pred"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kqCnKT5OJnOe",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "y_pred_trn = [guess] * len(y_train)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wY90sjMkJ1TJ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "y_pred_tst = [guess] * len(y_test)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4762.60855231, 3336.97859821, 2947.65370231, ..., 2947.65370231,\n",
+              "       3336.97859821, 3336.97859821])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1926,63 +1919,40 @@
       "metadata": {
         "id": "TYZrYvNOIpCk",
         "colab_type": "code",
+        "outputId": "f26ea1f5-352d-46cf-99ae-74eb4a9a502a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5f127a14-f48f-4a2b-da56-b2affe77eb09"
+        }
       },
       "source": [
-        "# MAE for training data\n",
-        "mse_trn = mean_absolute_error(y_train,y_pred_trn)\n",
-        "mse_trn"
+        "mae = mean_absolute_error(y_test,y_pred)\n",
+        "mae"
       ],
-      "execution_count": 67,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1201.8811133682555"
+              "825.8987822403527"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 23
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "cpvRwXowKOue",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "58783064-6764-4138-f589-a4a2566e51d0"
+        "id": "Z__YnpncSCi0",
+        "colab_type": "text"
       },
       "source": [
-        "# MAE for test data\n",
-        "mse_tst = mean_absolute_error(y_test,y_pred_tst)\n",
-        "mse_tst"
-      ],
-      "execution_count": 68,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1197.7088871089013"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 68
-        }
+        "# RMSE"
       ]
     },
     {
@@ -1990,63 +1960,40 @@
       "metadata": {
         "id": "ihuE4wZXKf7L",
         "colab_type": "code",
+        "outputId": "0b5ce8cf-abce-458d-ce53-712124f12f7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "97551a21-c55e-486d-902a-6e22a196e1aa"
+        }
       },
       "source": [
-        "# RMSE for training data\n",
-        "rmse_trn = np.sqrt(mse_trn)\n",
-        "rmse_trn"
+        "rmse= np.sqrt(mse)\n",
+        "rmse"
       ],
-      "execution_count": 70,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "34.66815705179979"
+              "28.738454764311054"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 70
+          "execution_count": 24
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "CRND57M3LOfD",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "d7963371-e3e9-4744-fa8a-6bf14cc42f64"
+        "id": "IiKfeMKQSK8j",
+        "colab_type": "text"
       },
       "source": [
-        "# RMSE for test data\n",
-        "rmse_tst = np.sqrt(mse_tst)\n",
-        "rmse_tst"
-      ],
-      "execution_count": 71,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "34.60793098567005"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 71
-        }
+        "# R2 score"
       ]
     },
     {
@@ -2054,75 +2001,30 @@
       "metadata": {
         "id": "CrSKSD66Lcsf",
         "colab_type": "code",
+        "outputId": "fc807823-a169-42ac-cccd-addcce771aad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a43465cc-943d-4b0e-9964-ec8cb37616b2"
+        }
       },
       "source": [
-        "# R2 score for training data\n",
-        "r2_score(y_test, y_pred_tst)"
+        "r2_score(y_test, y_pred)"
       ],
-      "execution_count": 72,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "-4.218690517676649e-05"
+              "0.5213303957090346"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 25
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0DYBDIxvMKeq",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "223b3396-4c64-4f81-8add-2a7864f835de"
-      },
-      "source": [
-        "# R2 score for test data\n",
-        "r2_score(y_train, y_pred_trn)"
-      ],
-      "execution_count": 73,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 73
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9EwH6w_XMVbo",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
