--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -2259,6 +2259,97 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hnRyB0djnZRV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "USe4hvyNnbNp",
+        "colab_type": "text"
+      },
+      "source": [
+        "### try and feature engineer some new features to get a better outcome"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EWPfUYUunf8J",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        },
+        "outputId": "bd05eb0a-0778-4830-98af-d27844d47b95"
+      },
+      "source": [
+        "!pip install zipcodes"
+      ],
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting zipcodes\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3a/9e/899d449f76e5f303c7fe2c9b6142ef0121b5ec1f1279a7f27b2bbb90025c/zipcodes-1.1.0-py2.py3-none-any.whl (715kB)\n",
+            "\r\u001b[K     |▌                               | 10kB 18.0MB/s eta 0:00:01\r\u001b[K     |█                               | 20kB 3.1MB/s eta 0:00:01\r\u001b[K     |█▍                              | 30kB 4.2MB/s eta 0:00:01\r\u001b[K     |█▉                              | 40kB 2.9MB/s eta 0:00:01\r\u001b[K     |██▎                             | 51kB 3.3MB/s eta 0:00:01\r\u001b[K     |██▊                             | 61kB 3.9MB/s eta 0:00:01\r\u001b[K     |███▏                            | 71kB 4.1MB/s eta 0:00:01\r\u001b[K     |███▋                            | 81kB 4.5MB/s eta 0:00:01\r\u001b[K     |████▏                           | 92kB 5.0MB/s eta 0:00:01\r\u001b[K     |████▋                           | 102kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████                           | 112kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████▌                          | 122kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████                          | 133kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████▍                         | 143kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████▉                         | 153kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████▎                        | 163kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 174kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████▎                       | 184kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████▊                       | 194kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████▏                      | 204kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████▋                      | 215kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████                      | 225kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████▌                     | 235kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████                     | 245kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████▌                    | 256kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████                    | 266kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████▍                   | 276kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████▉                   | 286kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████▎                  | 296kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████▊                  | 307kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████▏                 | 317kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 327kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████▏                | 337kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 348kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████                | 358kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████▌               | 368kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 378kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████▍              | 389kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 399kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████▎             | 409kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████▉             | 419kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████▎            | 430kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████▊            | 440kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████▏           | 450kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 460kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 471kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████▌          | 481kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 491kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████▌         | 501kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 512kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 522kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████▉        | 532kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████▎       | 542kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 552kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▏      | 563kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▋      | 573kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▏     | 583kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▋     | 593kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████     | 604kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▌    | 614kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 624kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▍   | 634kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▉   | 645kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▎  | 655kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▊  | 665kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▎ | 675kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▊ | 686kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 696kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▋| 706kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 716kB 4.8MB/s \n",
+            "\u001b[?25hInstalling collected packages: zipcodes\n",
+            "Successfully installed zipcodes-1.1.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sP7Ew2dOnleW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import zipcodes"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cPAkOsdMp4jG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VQs4PMTpqDCu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
